# staticlib_qttest

./: CMakeLists.txt
subject/: CMakeLists.txt  subject.cpp  subject.h
test/: CMakeLists.txt  testsubject.cpp
